--- a/Complete-Python-3-Bootcamp/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/Complete-Python-3-Bootcamp/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,12 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import random\n",
+    "# number = random.randint(1, 100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Guessing Game!\n",
+      "Guess the random number between from 1 to 100. The program will tell you if you are warm(er) of cold(er)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(\"Welcome to the Guessing Game!\")\n",
+    "# print(\"If your guess is less than 1 or greater than 100, it is OUT OF BOUNDS.\")\n",
+    "# print(\"If your first guess is within 10 of the number, you are WARM!\")\n",
+    "# print(\"If it is further than 10 away from the number, you are COLD!\")\n",
+    "# print(\"On all subsequent turns, if your guess is closer to the number than the previous guess, you are WARMER!\")\n",
+    "# print(\"If it is further from the number than the previous guess, you are COLDER!\")\n",
+    "# print(\"When you correctly guess the number, you will see how many guesses it took!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# guesses = [0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "while True:\n",
-    "    \n",
-    "    pass"
+    "# while True:\n",
+    "#     guess = int(input(\"Please place a valid guess \"))\n",
+    "#     if guess < 1 or guess > 100:\n",
+    "#         print(\"OUT OF BOUNDS\")\n",
+    "#     pass"
    ]
   },
   {
@@ -122,16 +138,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Guessing Game!\n",
+      "If your guess is less than 1 or greater than 100, it is OUT OF BOUNDS.\n",
+      "If your first guess is within 10 of the number, you are WARM!\n",
+      "If it is further than 10 away from the number, you are COLD!\n",
+      "On all subsequent turns, if your guess is closer to the number than the previous guess, you are WARMER!\n",
+      "If it is further from the number than the previous guess, you are COLDER!\n",
+      "When you correctly guess the number, you will see how many guesses it took!\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
+    "number = random.randint(1, 100)\n",
+    "guesses = [0]\n",
+    "\n",
+    "print(\"Welcome to the Guessing Game!\")\n",
+    "print(\"If your guess is less than 1 or greater than 100, it is OUT OF BOUNDS.\")\n",
+    "print(\"If your first guess is within 10 of the number, you are WARM!\")\n",
+    "print(\"If it is further than 10 away from the number, you are COLD!\")\n",
+    "print(\"On all subsequent turns, if your guess is closer to the number than the previous guess, you are WARMER!\")\n",
+    "print(\"If it is further from the number than the previous guess, you are COLDER!\")\n",
+    "print(\"When you correctly guess the number, you will see how many guesses it took!\")\n",
+    "\n",
+    "\n",
     "while True:\n",
-    "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
+    "    guess = int(input(\"Please place a valid guess \"))\n",
+    "    \n",
+    "    # Guess is out of bounds\n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print(\"OUT OF BOUNDS\")\n",
+    "        continue\n",
+    "        \n",
+    "    guesses.append(guess)\n",
+    "    \n",
+    "    # Guess is correct\n",
+    "    if guess == number:\n",
+    "        print(\"You guessed correctly! It took {} gues(ses).\".format(len(guesses)-1))  # correct for init 0\n",
+    "        break       \n",
+    "    \n",
+    "    # Guess is not first guess\n",
+    "    if guesses[-2]:       \n",
+    "        if abs(guess - number) < abs(guesses[-2] - number):\n",
+    "            print(\"WARMER!\")\n",
+    "        else:\n",
+    "            print(\"COLDER!\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Guess is first guess\n",
+    "    else:\n",
+    "        diff = abs(guess - number)\n",
+    "        if diff <= 10:\n",
+    "            print(\"WARM!\")\n",
+    "        else:\n",
+    "            print(\"COLD!\")\n",
+    "        continue"
    ]
   },
   {
@@ -153,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
