Practise exercises challenge problems

--- a/Complete-Python-3-Bootcamp/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/Complete-Python-3-Bootcamp/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -834,19 +834,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def spy_game(nums):\n",
-    "    pass"
+    "def spy_game(nums):  # Different approach from solution\n",
+    "    for i, num in enumerate(nums):\n",
+    "        if num == 7 and nums[:i].count(0) >= 2:\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -854,9 +868,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -864,9 +889,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -884,20 +920,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
-    "                "
+    "    primes = 0\n",
+    "    for n in range(num+1):\n",
+    "        if isPrime(n):\n",
+    "            primes += 1\n",
+    "    return primes\n",
+    "    \n",
+    "def isPrime(num):  \n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    if num == 2:\n",
+    "        return True\n",
+    "    \n",
+    "    for divider in range (2, num):\n",
+    "        if num % divider == 0:\n",
+    "            return False\n",
+    "    return True                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
@@ -921,19 +982,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_big(letter):\n",
-    "    pass"
+    "def print_big(letter):  # Letter layout is different from example\n",
+    "    patterns = {  # Not all patterns are used\n",
+    "        0: \"     \",\n",
+    "        1: \"    *\",\n",
+    "        2: \"   * \",\n",
+    "        3: \"   **\",\n",
+    "        4: \"  *  \",\n",
+    "        5: \"  * *\",\n",
+    "        6: \"  ** \",\n",
+    "        7: \"  ***\",\n",
+    "        8: \" *   \",\n",
+    "        9: \" *  *\",\n",
+    "        10:\" * * \",\n",
+    "        11:\" * **\",\n",
+    "        12:\" **  \",\n",
+    "        13:\" ** *\",\n",
+    "        14:\" *** \",\n",
+    "        15:\" ****\",\n",
+    "        16:\"*    \",\n",
+    "        17:\"*   *\",\n",
+    "        18:\"*  * \",\n",
+    "        19:\"*  **\",\n",
+    "        20:\"* *  \",\n",
+    "        21:\"* * *\",\n",
+    "        22:\"* ** \",\n",
+    "        23:\"* ***\",\n",
+    "        24:\"**   \",\n",
+    "        25:\"**  *\",\n",
+    "        26:\"** * \",\n",
+    "        27:\"** **\",\n",
+    "        28:\"***  \",\n",
+    "        29:\"*** *\",\n",
+    "        30:\"**** \",\n",
+    "        31:\"*****\",\n",
+    "    }      \n",
+    "    \n",
+    "    letters={\n",
+    "        'A':[14,17,31,17,17],\n",
+    "        'B':[30,17,30,17,30],\n",
+    "        'C':[15,16,16,16,15],\n",
+    "        'D':[30,17,17,17,30],\n",
+    "        'E':[31,16,28,16,31],\n",
+    "        'F':[31,16,28,16,16],\n",
+    "        'G':[15,16,23,17,14],\n",
+    "        'H':[17,17,31,17,17],\n",
+    "        'I':[ 4, 4, 4, 4, 4],\n",
+    "        'J':[ 1, 1, 1,17,14],\n",
+    "        'K':[17,18,28,18,17],\n",
+    "        'L':[16,16,16,16,31],\n",
+    "        'M':[17,27,21,17,17],\n",
+    "        'N':[17,25,21,19,17],\n",
+    "        'O':[14,17,17,17,14],\n",
+    "        'P':[30,17,30,16,16],\n",
+    "        'Q':[14,17,21,18,13],\n",
+    "        'R':[30,17,30,17,17],\n",
+    "        'S':[15,16,14, 1,30],\n",
+    "        'T':[31, 4, 4, 4, 4],\n",
+    "        'U':[17,17,17,17,14],\n",
+    "        'V':[17,17,17,10, 4],\n",
+    "        'W':[17,17,21,27,17],\n",
+    "        'X':[17,10, 4,10,17],\n",
+    "        'Y':[17,10, 4, 4, 4],\n",
+    "        'Z':[31, 2, 4, 8,31],\n",
+    "    }\n",
+    "    \n",
+    "    for patternkey in letters[letter.upper()]:\n",
+    "        print(patterns[patternkey])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " *** \n",
+      "*   *\n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n"
+     ]
+    }
+   ],
    "source": [
     "print_big('a')"
    ]
